prod/templates/svcportalnoticias.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcportalnoticias
  namespace: prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: portalnoticias
