prod/templates/svcsistemanoticias.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcsistemanoticias
  namespace: prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: sistemanoticias
