prod/templates/ingressportal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressportal
  namespace: prod
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: svcportalnoticias
          servicePort: 80
        path: /
